padding issue on right aligned images

--- a/less/style.less
+++ b/less/style.less
@@ -111,11 +111,13 @@
 
 .alignright.headshot, .alignright.inline {
      margin: 5px 0 8px 24px;
+
+     @media only screen and (max-width: 320px) {
+    margin-right: 0;
+      }
+
 }
 
-@media only screen and (max-width: 320px) {
-
-  }
 
 
 
